improvement in the setup and organization of files

--- a/files/database.yml
+++ b/files/database.yml
@@ -2,7 +2,8 @@ production:
   adapter: postgresql
   encoding: unicode
   database: msf
-  pool: 5
+  pool: 15
+  timeout: 5
   username: postgres
   password: postgres
   host: db
